<resources>
    <string name="app_name">ControlCortase</string>
    <string name="title_activity_control">Motor Control</string>
    <string name="btn_scan">Scan Devices</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_disconnect">Disconnect</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_connected">Connected</string>
    <string name="status_connecting">Connecting...</string>
    <string name="label_m1">Left Motor (GPIO 17, 18, 23)</string>
    <string name="label_m2">Right Motor (GPIO 27, 22, 24)</string>
    <string name="btn_forward">Forward</string>
    <string name="btn_backward">Backward</string>
    <string name="btn_stop">STOP</string>
    <string name="label_speed">Speed: %d%%</string>
    <string name="label_admin">ADMINISTRATION</string>
    <string name="btn_update">Update (Deploy)</string>
    <string name="btn_restart">Restart Pi</string>
    <string name="msg_rebooting">System rebooting...\nAuto-reconnecting in 20s</string>
    <string name="label_device_name">Device: %s</string>
    <string name="label_device_address">Address: %s</string>
    <string name="title_update_logs">Deployment Logs</string>
    <string name="pin_fwd">Fwd</string>
    <string name="pin_bwd">Bwd</string>
    <string name="pin_spd">Spd</string>
    <string name="confirm_restart">Are you sure you want to restart the device?</string>
    <string name="hint_log">Log...</string>
    <!-- Типы драйверов -->
    <string name="label_driver_type">Motor Driver Type</string>
    <string name="label_pins_l298n">L298N Pins: IN1(Fwd) | IN2(Bwd) | ENA(Speed)</string>
    <string name="label_pins_bts7960">BTS7960 Pins: RPWM | LPWM | R_EN | L_EN</string>
    <string name="hint_pin_in1">IN1 (Fwd)</string>
    <string name="hint_pin_in2">IN2 (Bwd)</string>
    <string name="hint_pin_ena">ENA (Spd)</string>
    <string name="hint_pin_rpwm">RPWM (Fwd)</string>
    <string name="hint_pin_lpwm">LPWM (Bwd)</string>
    <string name="hint_pin_r_en">R_EN</string>
    <string name="hint_pin_l_en">L_EN</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported</string>
    <string name="error_connect_failed">Connection failed</string>
    <string name="btn_language">Language / Язык / Idioma</string>
    <string name="label_recent_devices">Recent Devices</string>
    <string name="btn_docs">Documentation</string>
    <string name="btn_help">Help (Docs)</string>
    <string name="msg_confirm_scan">Scanning will disconnect current connection. Continue?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="lang_en">English</string>
    <string name="lang_ru">Russian (Русский)</string>
    <string name="lang_es">Spanish (Español)</string>
    <string name="tab_config">Configuration</string>
    <string name="title_activity_config">Configuration</string>
    <string name="tab_config_sensor">HC-SR04 Sensor</string>
    <string name="btn_scan_sensor">Scan HC-SR04</string>
    <string name="btn_save_config">Save &amp; Apply</string>
    <string name="msg_config_saved">Configuration saved and applied!</string>
    <string name="label_left_motor">Left Motor</string>
    <string name="label_right_motor">Right Motor</string>
    <string name="label_m1_pins">Motor 1 (Pins: %d, %d, %d)</string>
    <string name="label_m2_pins">Motor 2 (Pins: %d, %d, %d)</string>
    
    <!-- WiFi Settings -->
    <string name="wifi_settings">WiFi Settings</string>
    <string name="wifi_scan_networks">Scan Networks</string>
    <string name="wifi_available_networks">Available Networks</string>
    <string name="wifi_saved_networks">Saved Networks</string>
    <string name="wifi_current_connection">Current Connection</string>
    <string name="wifi_not_connected">Not Connected</string>
    <string name="wifi_connected_to">Connected to %s</string>
    <string name="wifi_ssid">Network Name (SSID)</string>
    <string name="wifi_password">Password</string>
    <string name="wifi_connect">Connect</string>
    <string name="wifi_reconnect">Reconnect</string>
    <string name="wifi_disconnect">Disconnect</string>
    <string name="wifi_scanning">Scanning for networks...</string>
    <string name="wifi_connecting">Connecting to %s...</string>
    <string name="wifi_connection_failed">Connection failed</string>
    <string name="wifi_enter_password_title">Enter WiFi Password</string>
    <string name="wifi_remember_network">Remember this network</string>
    <string name="wifi_signal_strength">Signal: %s</string>
    <string name="wifi_security_open">Open</string>
    <string name="wifi_security_wpa">WPA</string>
    <string name="wifi_security_wpa2">WPA2</string>
    <string name="wifi_no_networks">No networks found</string>
    <string name="wifi_forget_network">Forget Network</string>
    <string name="wifi_forget_network_confirm">Forget network \"%s\"?</string>
    <string name="wifi_network_forgotten">Network \"%s\" forgotten</string>
    <string name="wifi_password_required">Password is required</string>
    <string name="wifi_disconnect_confirm">Disconnect from WiFi network?</string>
    <string name="wifi_disconnected">Disconnected from WiFi</string>
    <string name="label_invert">Invert</string>
</resources>
